--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/core": "^7.10.2",
     "@babel/node": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
+    "eslint": "^7.2.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.4",
     "pug": "^3.0.0",
@@ -17,5 +18,10 @@
   },
   "scripts": {
     "dev:server": "nodemon --exec babel-node src/server"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "prettier": "^2.0.5"
   }
 }
