--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@babel/preset-env": "^7.10.2",
     "eslint": "^7.2.0",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "pug": "^3.0.0",
     "socket.io": "^2.3.0"
   },
   "scripts": {
-    "dev:server": "nodemon --exec babel-node src/server"
+    "dev:server": "nodemon --exec babel-node src/server.js"
   },
   "devDependencies": {
     "eslint-config-prettier": "^6.11.0",
