--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Jae Hui Seo <dayjaycs49@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@babel/cli": "^7.10.3",
     "@babel/core": "^7.10.2",
     "@babel/node": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
@@ -27,7 +28,12 @@
   "scripts": {
     "dev:server": "nodemon --exec babel-node src/server.js --ignore assets/ --ignore src/static",
     "dev:assets": "gulp",
-    "build:assets": "gulp build"
+    "build:assets": "gulp build",
+    "build:server": "babel src --out-dir build",
+    "copyAll": "cp -R src/static build && cp -R src/views build",
+    "build": "yarn build:server && yarn build:assets && yarn copyAll",
+    "prebuild": "rm -rf build",
+    "start": "node build/server.js"
   },
   "devDependencies": {
     "eslint-config-prettier": "^6.11.0",
