--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "copyAll": "cp -R src/static build && cp -R src/views build",
     "build": "yarn build:server && yarn build:assets && yarn copyAll",
     "prebuild": "rm -rf build",
-    "postinstall": "yarn build",
-    "start": "node build/server.js"
+    "start": "node build/server.js",
+    "prestart": "yarn build"
   },
   "devDependencies": {
     "eslint-config-prettier": "^6.11.0",
