--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-env": "^7.10.2",
     "babelify": "^10.0.0",
     "del": "^5.1.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.2.0",
     "express": "^4.17.1",
     "gulp": "^4.0.2",
